Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.7
  CHANGES:
    * Podcast episodes are now loaded asynchronously on startup to reduce delays.
    * Removed alpha state and not really working spectrum analyzer applet.

  BUGFIXES:
    * Fix crash in Network Requests Viewer. (BR 311760)
    * Prevent crash when using File Browser breadcrumbs. (BR 265626)
    * Prevent crash in ServiceBase::setModel triggered by Last.fm rewrite. (BR 311723)
    * Fix incorrect display of Last.fm tags and other items. (BR 244555)

VERSION 2.7-Beta 1
  FEATURES:
    * Track dragging support in Unique Tracks tab of the Synchronize Statistics action;
      allows you to do a "diff" between collections and transfer missing tracks. (BR 237266)
    * Amarok now scrobbles tracks in streams if the stream correctly updates
      meta-data. (BR 240732)
    * When scrobbling to Last.fm, Amarok announces suggested tag corrections
      (configurable). (BR 309697)
    * Ability to scrobble recently played tracks from iPod (and the like) to Last.fm.
    * Synchronization of labels and rating between Last.fm and Amarok collections;
      play count can be synchronized one-way from Last.fm to Amarok. (BR 206249)
    * Statistics synchronization between collections, supports rating, first / last
      played time, play count and labels.
    * New APG constraint: Specify a total file size for playlist. (BR 283618)
    * Amazon store: Added support for Amazon MP3 in Italy and Spain. (BR 307981)
    * Mark downloaded podcast episodes to keep, even when purge is enabled. (BR 261062)
    * Nepomuk plugin: Play and manage tracks using the Nepomuk database.
    * Support for reading and writing tags from/to mod, s3m, it and xm files.
      Patch by Mathias Panzenböck.
    * Amazon store: It is now possible to add items to your shopping cart using amarok:// URLs.
    * Amazon store: Use the context info applet to show further infos about a selected item.