@@ -8,6 +8,7 @@ VERSION 2.7
     * Removed alpha state and not really working spectrum analyzer applet.
 
   BUGFIXES:
+    * Fix Ampache albums & track not being shown, a recent regression. (BR 310862)
     * Fix crash in Network Requests Viewer. (BR 311760)
     * Prevent crash when using File Browser breadcrumbs. (BR 265626)
     * Prevent crash in ServiceBase::setModel triggered by Last.fm rewrite. (BR 311723)
